# he_project

./: .env  .gitignore  CMakeLists.txt  heaan.cu  load.cu  main.cu  phantom.cu  test.cu
python/: ExtractEmbeddings.py  model.py  performance.py  precision.py  precompute.py  precompute2.py  precompute3.py  precompute4.py  precompute5.py  test.ipynb  test.py
python/outputs/: output.txt
python/precomputed/: layer0_output_inv_sqrt_var.txt  layer0_output_mean.txt  layer0_self_output_inv_sqrt_var.txt  layer0_self_output_mean.txt  layer1_output_inv_sqrt_var.txt  layer1_output_mean.txt  layer1_self_output_inv_sqrt_var.txt  layer1_self_output_mean.txt
python/precomputed2/: layer0_output_inv_sqrt_var.txt  layer0_output_mean.txt  layer0_self_output_inv_sqrt_var.txt  layer0_self_output_mean.txt  layer1_output_inv_sqrt_var.txt  layer1_output_mean.txt  layer1_self_output_inv_sqrt_var.txt  layer1_self_output_mean.txt
python/precomputed3/: layer0_output_inv_sqrt_var.txt  layer0_output_mean.txt  layer0_self_output_inv_sqrt_var.txt  layer0_self_output_mean.txt  layer1_output_inv_sqrt_var.txt  layer1_output_mean.txt  layer1_self_output_inv_sqrt_var.txt  layer1_self_output_mean.txt
python/precomputed4/: layer0_output_inv_sqrt_var.txt  layer0_output_mean.txt  layer0_self_output_inv_sqrt_var.txt  layer0_self_output_mean.txt  layer1_output_inv_sqrt_var.txt  layer1_output_mean.txt  layer1_self_output_inv_sqrt_var.txt  layer1_self_output_mean.txt
python/precomputed5/: layer0_output_inv_sqrt_var.txt  layer0_output_mean.txt  layer0_self_output_inv_sqrt_var.txt  layer1_output_mean.txt  (+4 more)
(+24 files in other folders)
